#92 prevent filter menu from being cut off if there are few talks

--- a/src/main/webapp/public/css/side-menu.css
+++ b/src/main/webapp/public/css/side-menu.css
@@ -53,10 +53,10 @@ appears on the left side of the page.
     position: absolute;
     left: 0;
     top: 0;
-    bottom: 0;
     z-index: 1000; /* so the menu or its navicon stays above all content */
     overflow-y: visible;
     -webkit-overflow-scrolling: touch;
+    padding-bottom: 2.5em;
 }
 
 /* -- Dynamic Button For Responsive Menu -------------------------------------*/
